--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -19,15 +19,14 @@ jobs:
         
       - name: Docker Build
         run: |
-          docker build -t featuredrift:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/featuredrift-web:latest .
 
       - name: Push to GHCR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker tag featuredrift:latest ghcr.io/${{ github.repository_owner }}/featuredrift:latest
-          docker push ghcr.io/${{ github.repository_owner }}/featuredrift:latest
+          docker push ghcr.io/${{ github.repository_owner }}/featuredrift-web:latest
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
