--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@moser-inc/eslint-config-react": "^4.0.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "react": "^19.0.0",
