--- a/nginx.conf
+++ b/nginx.conf
@@ -27,13 +27,14 @@ server {
 
     root /usr/share/nginx/html;
 
+    location /assets/ {
+        add_header Cache-Control "public, max-age=31536000, s-maxage=31536000, immutable";
+        try_files $uri =404;
+    }
+
     location / {
         try_files $uri $uri/ $uri.html /index.html;
         add_header Cache-Control "public, no-store, no-cache, must-revalidate" always;
-    }
-
-    location /assets/ {
-        add_header Cache-Control "public, max-age=31536000, s-maxage=31536000, immutable";
     }
 
     location /health {
