--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.75.5",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
